Added Unix Socket Support, JavaPHP now requires Java 17 or above